# mess-mcp

./: .coverage  .gitignore  README.md  README.old.md  mcp_server.py  proposal.md  pyproject.toml  setup_network.sh  start_all.sh  test_server.py
.agent/workflows/: start-moodle-mcp.md
.github/workflows/: publish.yml
applets/: applet.md
docs/: mess_openapi.yaml
mcp_servers/: mcp.md
mcp_servers/intranet_mcp/: http_server.py  mcp_server.py
mcp_servers/intranet_mcp/vector_db/: storage_stats.json
mcp_servers/mess_mcp/: pyproject.toml
mcp_servers/moodle_mcp/: README.md  generate_embeddings.py  knowledge_graph.py  package-lock.json  package.json  process_pdfs.py  suggest_study.py  tokens.json  tsconfig.json  vector_store.py
mcp_servers/moodle_mcp/scripts/: generate-tokens.js
mcp_servers/moodle_mcp/src/: http-server.ts  index.ts  server.ts  types.ts
mess-mate/: docker-compose.yml
mess-mate/applet/: index.html  package-lock.json  tailwind.config.js
mess-mate/applet/src/: App.jsx  api.js  index.css
mess-mate/backend/app/: main.py  models.py
moodle/: README.md  moodle._mcp_doc.md
moodle/docker/: docker-compose.yml  setup_mcp.php
moodle/docs/: MOODLE_SETUP.md  TESTING_MCP.md
moodle/plugin/: CHANGELOG.md  README.md  lib.php  locallib.php  server.php  version.php
moodle/plugin/db/: access.php
moodle/plugin/tests/: client_test.php  request_test.php  server_test.php  tool_provider_test.php
orchestrator/: README.md  applet-development.md  package-lock.json  package.json  tailwind.config.js  vite.config.js
orchestrator/applets/calendar/: auth.js  bridge.js  calendar.js  index.html
orchestrator/applets/chatbot/: .env  chat.js  index.html  package-lock.json  server.js  style.css
orchestrator/applets/liha/: app.js  index.html  storage.js  style.css
orchestrator/demo-applets/: receiver.html  sender.html
orchestrator/src/: demo-server.js
orchestrator/src/applets/: manifests.json
src/mess_mcp/: __init__.py  __main__.py  api.py  constants.py  prompts.py  resources.py  server.py  tools.py
tests/: conftest.py  test_api.py  test_main.py  test_prompts.py  test_resources.py  test_server.py  test_tools.py
(+58 files in other folders)
