[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mess-mcp"
version = "0.2.0"
description = "A sophisticated Model Context Protocol server enabling AI assistants to integrate with the IIIT Mess portal."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.3.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.0.1",
]

[project.scripts]
mess-mcp = "mess_mcp.__main__:main"
