[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mess-mcp"
version = "0.2.0"
description = "A Model Context Protocol server enabling AI assistants to integrate with the IIIT Mess portal."
readme = "README.md"
license = { text = "GPL-3.0-only" }
requires-python = ">=3.10"
authors = [
    { name = "Shreyansh Gupta", email = "shreyansh.gupta@students.iiit.ac.in" },
]
keywords = ["mcp", "iiit", "mess", "ai", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "mcp>=1.3.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.0.1",
]

[project.urls]
Homepage = "https://github.com/shrey715/mess-mcp"
Repository = "https://github.com/shrey715/mess-mcp"
"Bug Tracker" = "https://github.com/shrey715/mess-mcp/issues"

[project.scripts]
mess-mcp = "mess_mcp.__main__:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["mess_mcp"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 85
show_missing = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "respx>=0.22.0",
]
